# Machine-Learning

./: .gitignore  Pipfile  pyproject.toml  requirements.txt
DL/Perceptron/: fundamentals_perceptron.ipynb
ML/Metrics/Accuracy/: fundmentals_accuracy.ipynb
ML/Metrics/Confusion Matrix/: fundamentals_confusion_matrix.ipynb
ML/Supervised Learning/Linear Regression/: fundamentals_linear_regression.ipynb  fundamentals_multiple_linear_regression.ipynb
NLP/Vector Embeddings/: fundamentals_vector_embeddings_comparing.ipynb
Statistic/: statistical_terms.ipynb  statistical_terms.md
