[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "chainlit>=2.9.2",
    "chromadb>=1.3.5",
    "gradio>=6.0.1",
    "haystack-ai>=2.20.0",
    "huggingface-hub>=0.36.0",
    "iprogress>=0.4",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "langchain>=1.1.0",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-experimental>=0.4.0",
    "langchain-huggingface>=1.1.0",
    "langchain-text-splitters>=1.0.0",
    "langgraph>=1.0.4",
    "llama-index>=0.12.52",
    "llama-index-embeddings-huggingface>=0.5.5",
    "matplotlib>=3.10.7",
    "nltk>=3.9.2",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.2.1",
    "ranx>=0.3.21",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.1.2",
    "spacy>=3.8.11",
    "streamlit>=1.51.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
    "unstructured[all-docs]>=0.18.21",
]
